--- a/src/components/MyChart/MyChart.css
+++ b/src/components/MyChart/MyChart.css
@@ -1,7 +1,17 @@
 .chart-container {
   display: flex;
   justify-content: space-between;
-  margin-right: 80px;
-  margin-left: 80px;
+  margin-right: 20px;
+  margin-left: 20px;
   margin-top: 100px;
+}
+.line-chart1{
+    border: 2px solid gold;
+    border-radius: 10px;
+    padding: 30px;
+}
+.line-chart2{
+    border: 2px solid rgba(255, 166, 0, 0.582);
+    border-radius: 10px;
+    padding: 10px;
 }
