--- a/src/components/MyChart/MyChart.css
+++ b/src/components/MyChart/MyChart.css
@@ -9,9 +9,11 @@
     border: 2px solid gold;
     border-radius: 10px;
     padding: 30px;
+    margin: 10px;
 }
 .line-chart2{
     border: 2px solid rgba(255, 166, 0, 0.582);
     border-radius: 10px;
     padding: 10px;
+    margin: 10px;
 }
